[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CairoSVG"
dynamic = ["version"]
description = "A Simple SVG Converter based on Cairo"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.9"
license = {text = "LGPL-3.0-or-later"}
authors = [{name = "Guillaume Ayoub", email = "contact@courtbouillon.org"}]
keywords = ["svg", "converter", "cairo", "pdf", "png", "postscript"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "pycairo",
    "cssselect2",
    "defusedxml",
    "pillow",
    "tinycss2",
]

[project.urls]
Homepage = "https://courtbouillon.org/cairosvg"
Documentation = "https://cairosvg.org/documentation/"
Code = "https://github.com/Kozea/CairoSVG/"
"Issue tracker" = "https://github.com/Kozea/CairoSVG/issues"
Donation = "https://opencollective.com/courtbouillon"

[project.optional-dependencies]
doc = ["sphinx", "sphinx_rtd_theme"]
test = ["pytest", "flake8", "isort"]

[project.scripts]
cairosvg = "cairosvg.__main__:main"

[tool.setuptools]
packages = ["cairosvg"]

[tool.setuptools.dynamic]
version = {file = "cairosvg/VERSION"}

[tool.setuptools.package-data]
cairosvg = ["VERSION"]

[tool.pytest.ini_options]
norecursedirs = [
    "build",
    "cairosvg_reference",
    "dist",
    "test_non_regression/cairosvg_reference",
    "venv",
    ".cache",
    ".eggs",
    ".git",
    "*.egg-info",
]

[tool.isort]
default_section = "THIRDPARTY"
multi_line_output = 4
